--- a/client/contacts.css
+++ b/client/contacts.css
@@ -47,9 +47,10 @@
             left: 19px;
         }
         #avatar {
-            height: 48px;
-            width: auto;
+            height: 100%;
+            width: 100%;
             border-radius: 2px;
+            object-fit: cover;
         }
 
     .profile {
