--- a/client/src/components/Join/Join.module.css
+++ b/client/src/components/Join/Join.module.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 8px;
 
   -webkit-box-shadow: 5px 5px 17px 1px rgba(0, 0, 0, 0.3);
 	box-shadow: 5px 5px 17px 1px rgba(0, 0, 0, 0.3);
